--- a/css/style.production.css
+++ b/css/style.production.css
@@ -494,6 +494,12 @@ section h1 {
   border-right: 3px solid #357b7080;
 }
 
+#contact-form .mandatory {
+  color: #b9314f;
+  font-size: 18px;
+  padding-right: .5rem;
+}
+
 #contact-form input[type="submit"] {
   width: -webkit-fit-content;
   width: -moz-fit-content;
