--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,7 @@ input[type="submit"]:focus {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 100%;
 }
 
 .profile-about div ul {
@@ -382,6 +383,13 @@ section h1 {
 
 #contact-form input[type="submit"] {
   width: fit-content;
+}
+
+#contact-form,
+.standard-label,
+#contact-form input,
+#contact-form textarea {
+  max-width: 100%;
 }
 
 /* footer */
