--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,7 @@ input[type="submit"]:focus {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 100%;
+  /* max-width: 100%; */
 }
 
 .profile-about div ul {
@@ -470,6 +470,11 @@ section h1 {
 @media all and (max-width: 750px) {
   .profile {
     padding: 0 2rem;
+  }
+
+  .profile-about div,
+  .profile-about div ul li {
+    max-width: 100%;
   }
 
   .main-navigation .navigation-list {
