fix download CV link in about page for firefox browsers to have text color white even after visited

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -285,6 +285,10 @@ input[type="submit"]:focus {
   width: 100%;
 }
 
+.button-downloadcv:visited {
+  color: #fff;
+}
+
 .sun {
   -webkit-animation: 4s color-change infinite alternate linear;
           animation: 4s color-change infinite alternate linear;
