--- a/css/style.css
+++ b/css/style.css
@@ -235,6 +235,10 @@ input[type="submit"]:focus {
   width: 100%;
 }
 
+.button-downloadcv:visited {
+  color: var(--white);
+}
+
 .sun {
   animation: 4s color-change infinite alternate linear;
 }
