--- a/css/style.production.css
+++ b/css/style.production.css
@@ -534,6 +534,29 @@ section h1 {
   max-width: 100%;
 }
 
+/* scroll up (pages: About, Contact) */
+.scroll-up {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  opacity: 0.8;
+  -webkit-transition: opacity 0.5s;
+  -o-transition: opacity 0.5s;
+  transition: opacity 0.5s;
+}
+
+.scroll-up:hover,
+.scroll-up:active {
+  opacity: 1;
+}
+
+.scroll-up .fa-circle-arrow-up {
+  color: #2b2b2b;
+  font-size: 2.5em;
+  background-color: #fff;
+  border-radius: 50%;
+}
+
 /* footer */
 .page-footer {
   clear: both;
@@ -656,5 +679,11 @@ section h1 {
   #contact-form #contact-telephone,
   #contact-form #contact-message {
     width: 450px;
+  }
+}
+
+@media all and (min-width: 950px) {
+  .scroll-up {
+    right: 30px;
   }
 }
